Commit #3: Splash View & Process.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#01685F</color>
-    <color name="colorAccent">#009688</color>
+    <color name="colorPrimary">#a2b9e2</color>
+    <color name="colorPrimaryDark">#8396B6</color>
+    <color name="colorAccent">#a2b9e2</color>
     <color name="white">#FFFFFF</color>
-    <color name="red">#CB4335 </color>
 </resources>
