--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
+        <item name="fontFamily">@font/comfortaa</item>
     </style>
 
     <style name="ProgressTheme" parent="ThemeOverlay.AppCompat.Light">
