--- a/app/src/main/res/layout/view_news_item.xml
+++ b/app/src/main/res/layout/view_news_item.xml
@@ -8,6 +8,7 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="8dp"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="16dp"
     app:cardElevation="5dp">
 
